Fix parsing of version DB struct in database
Fixes #10336